--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -160,6 +160,14 @@ body.navigation-category * {
   }
 }
 
+.featured-categories-wrapper {
+  --d-wrap-padding-h: 10px;
+  max-width: var(--d-max-width);
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 var(--d-wrap-padding-h);
+}
+
 #main-outlet .list-container .topic-list tbody {
   border-top: 1px solid var(--primary-low);
 }
